--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  
+  <div class="container">
+    <header>
+      <h2>A Game Of</h2>
+      <h1>Tic Tac Toe</h1>
+    </header>
+    <div id="board">
+      <div id="0" class="cell"></div>
+      <div id="1" class="cell"></div>
+      <div id="2" class="cell"></div>
+      <div id="3" class="cell"></div>
+      <div id="4" class="cell"></div>
+      <div id="5" class="cell"></div>
+      <div id="6" class="cell"></div>
+      <div id="7" class="cell"></div>
+      <div id="8" class="cell"></div>
+    </div>
+  </div>
   <script src="assets/js/functions.js"></script>
 </body>
 </html>
