--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h2>A Game Of</h2>
       <h1>Tic Tac Toe</h1>
     </header>
+    <div id="messages"></div>
     <div id="board">
       <div id="0" class="cell"></div>
       <div id="1" class="cell"></div>
@@ -22,6 +23,9 @@
       <div id="6" class="cell"></div>
       <div id="7" class="cell"></div>
       <div id="8" class="cell"></div>
+    </div>
+    <div class="btn-container">
+      <button class="hide" id="restartBtn">Restart</button>
     </div>
   </div>
   <script src="assets/js/functions.js"></script>
